[tool.poetry]
name = "rnp"
version = "0.1.0"
description = ""
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
